k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: toktik-backend
          image: ghcr.io/thanawat-toktik/toktik-backend:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: ghcr-secret
