k8s/chunker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chunker
  labels:
    app: chunker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chunker
  template:
    metadata:
      labels:
        app: chunker
    spec:
      containers:
        - name: toktik-vid-convert
          image: ghcr.io/thanawat-toktik/toktik-vid-chonker:test
      imagePullSecrets:
        - name: ghcr-secret
