k8s/converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter
  labels:
    app: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
        - name: toktik-vid-convert
          image: ghcr.io/thanawat-toktik/toktik-vid-convert:latest
      imagePullSecrets:
        - name: ghcr-secret
