k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: database-pvc
          persistentVolumeClaim:
            claimName: database-pvc
