k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  labels:
    app: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue
  template:
    metadata:
      labels:
        app: queue
    spec:
      containers:
        - name: redis
          image: redis:7.2.1-alpine3.18
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 10
