k8s/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue-check-scheduler
  labels:
    app: queue-check-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: queue-check-scheduler
  template:
    metadata:
      labels:
        app: queue-check-scheduler
    spec:
      containers:
        - name: scheduler
          image: ghcr.io/thanawat-toktik/toktik-scheduler:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
