k8s/thumbnail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thumbnail
  labels:
    app: thumbnail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thumbnail
  template:
    metadata:
      labels:
        app: thumbnail
    spec:
      containers:
        - name: toktik-vid-convert
          image: ghcr.io/thanawat-toktik/toktik-thumbnail:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
