k8s/chunker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chunker
  labels:
    app: chunker
spec:
  selector:
    app: chunker
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
