k8s/converter-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter
  labels:
    app: converter
spec:
  selector:
    app: converter
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
