k8s/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: 5432
