k8s/notification-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  selector:
    app: notification
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
