k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: queue
spec:
  selector:
    app: queue
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
