k8s/thumbnail-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thumbnail
  labels:
    app: thumbnail
spec:
  selector:
    app: thumbnail
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
