k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    traefik.websocket.passthrough: "true"
    traefik.wss.protocol: https
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - pathType: Prefix
            path: /socket.io/
            backend:
              service:
                name: notification
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 80
